<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Arash Hatami
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/read"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/qkreply_menu_read"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/call"
        android:title="@string/qkreply_menu_call" />

    <item
        android:id="@+id/expand"
        android:title="@string/qkreply_menu_expand" />

    <item
        android:id="@+id/collapse"
        android:title="@string/qkreply_menu_collapse"
        android:visible="false" />

    <item
        android:id="@+id/view"
        android:title="@string/qkreply_menu_view" />

</menu>