<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Arash Hatami
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/main_menu_archive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/main_menu_unarchive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/main_menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/block"
        android:icon="@drawable/ic_block_black_24dp"
        android:title="@string/main_menu_block"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>