<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Arash Hatami
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/inbox"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/inboxIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_inbox_black_24dp"
            tools:tint="@color/tools_theme" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_inbox" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/archived"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/archivedIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_archive_black_24dp"
            tools:tint="?android:attr/textColorSecondary" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_archived" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scheduled"
        style="@style/DrawerRow"
        android:alpha="0.5">

        <ImageView
            android:id="@+id/scheduledIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_event_black_24dp"
            tools:tint="?android:attr/textColorSecondary" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_scheduled" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/divider" />

    <common.widget.AbanTextView
        style="@style/TextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/drawer_more" />

    <LinearLayout
        android:id="@+id/settings"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/settingsIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_settings_black_24dp"
            tools:tint="?android:attr/textColorSecondary" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/plus"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/plusIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_star_black_24dp"
            tools:tint="?android:attr/textColorSecondary" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/help"
        style="@style/DrawerRow">

        <ImageView
            android:id="@+id/helpIcon"
            style="@style/DrawerIcon"
            android:src="@drawable/ic_help_black_24dp"
            tools:tint="?android:attr/textColorSecondary" />

        <common.widget.AbanTextView
            style="@style/DrawerText"
            android:text="@string/drawer_help" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_rectangle_outline_2dp"
        android:backgroundTint="?android:attr/divider">

        <ImageView
            android:id="@+id/rateIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/rateSummary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rateTitle"
            tools:tint="@color/tools_theme" />

        <common.widget.AbanTextView
            android:id="@+id/rateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rate_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rateIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:textColor="primary"
            app:textSize="primary" />

        <common.widget.AbanTextView
            android:id="@+id/rateSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/rate_summary"
            app:layout_constraintEnd_toEndOf="@id/rateTitle"
            app:layout_constraintStart_toStartOf="@id/rateTitle"
            app:layout_constraintTop_toBottomOf="@id/rateTitle"
            app:textColor="secondary"
            app:textSize="secondary" />

        <common.widget.AbanTextView
            android:id="@+id/rateDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/rate_dismiss"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/rateOkay"
            app:layout_constraintTop_toBottomOf="@id/rateSummary"
            app:textColor="tertiary"
            app:textSize="secondary" />

        <common.widget.AbanTextView
            android:id="@+id/rateOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/rate_okay"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rateSummary"
            app:textColor="secondary"
            app:textSize="secondary" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>