<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Arash Hatami
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <common.widget.AbanTextView
        android:id="@+id/empty"
        style="@style/TextSecondary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="56dp"
        android:text="@string/blocked_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <common.widget.PreferenceView
                android:id="@+id/shouldIAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:summary="@string/settings_should_i_answer_summary"
                app:title="@string/settings_should_i_answer_title"
                app:widget="@layout/settings_switch_widget" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/divider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/conversations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/blocked_list_item" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/ab_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

</android.support.constraint.ConstraintLayout>